--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@
   <!-- Then load dependent scripts -->
   <script src="js/supabase.js"></script>
   <script src="js/api-service.js"></script>
+  <script src="js/proxy-service.js"></script>
   <!-- App initialization last -->
   <script src="js/app.js"></script>
 
