Fix: Use story-content component instead of story-display to show summary, vocabulary, and quiz

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <div class="tab-content active" id="generator-tab">
       <story-form></story-form>
       <div id="story-result" class="story-result hidden">
-        <story-display id="storyDisplay" showControls="true"></story-display>
+        <story-content id="storyDisplay" showHeader="true" showSummary="true" showVocabulary="true" showQuiz="true"></story-content>
         <div class="story-actions">
           <button id="generateQuizBtn" class="btn btn-secondary">Generate Quiz</button>
           <button id="continueStoryBtn" class="btn btn-secondary">Continue Story</button>
