Significantly reduce header size and improve mobile layout

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="container">
       <h1>EASY STORY EASY LIFE</h1>
-      <p>Create engaging educational stories with just a few clicks</p>
+      <p>Educational stories with AI</p>
     </div>
   </header>
 
