--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,34 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <!-- Lit library import -->
-  <script type="module" src="https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js"></script>
+  
+    <!-- Dynamically updated script imports -->
+    <script type="module" src="https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js"></script>
+    <script type="module" src="js/api.js"></script>
+    <script type="module" src="js/utils.js"></script>
+    <script type="module" src="components/toast-container.js"></script>
+    <script type="module" src="components/loading-overlay.js"></script>
+    <script type="module" src="components/form/form-settings-card.js"></script>
+    <script type="module" src="components/form/form-input-group.js"></script>
+    <script type="module" src="components/form/form-grid.js"></script>
+    <script type="module" src="components/form/form-checkbox-options.js"></script>
+    <script type="module" src="components/form/submit-button.js"></script>
+    <script type="module" src="components/story/story-header.js"></script>
+    <script type="module" src="components/story/story-text.js"></script>
+    <script type="module" src="components/story/story-summary.js"></script>
+    <script type="module" src="components/story/story-vocabulary.js"></script>
+    <script type="module" src="components/story/story-quiz.js"></script>
+    <script type="module" src="components/continuation/difficulty-selector.js"></script>
+    <script type="module" src="components/continuation/difficulty-description.js"></script>
+    <script type="module" src="components/continuation/vocabulary-display.js"></script>
+    <script type="module" src="components/continuation/continuation-form.js"></script>
+    <script type="module" src="components/continuation/continuation-result.js"></script>
+    <script type="module" src="components/continuation/error-message.js"></script>
+    <script type="module" src="components/story-form-refactored.js"></script>
+    <script type="module" src="components/story-content-refactored.js"></script>
+    <script type="module" src="components/story-continuation-refactored.js"></script>
+    <script type="module" src="js/component-loader.js"></script>
+    <script type="module" src="js/app.js"></script>
 </head>
 <body>
   <toast-container position="top-right"></toast-container>
