--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   
   <!-- Core configuration and services -->
   <script src="js/env.js"></script>
+  <script src="js/debug.js"></script>
   <script src="js/supabase.js"></script>
   <script src="js/api-service.js"></script>
   <script src="js/proxy-service.js"></script>
