Fix story continuation component by using proper custom element tag instead of div with data-component attribute

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           <div data-component="quiz-component" id="quizComponentContainer"></div>
         </div>
         <div id="continuation-container" class="continuation-container">
-          <div data-component="story-continuation" id="storyContinuationContainer"></div>
+          <story-continuation id="storyContinuationContainer"></story-continuation>
         </div>
       </div>
     </div>
